Fix: Atualização do z-index do elemento floatingMenuCttJs3

--- a/versions/1.0.0/src/common/scss/_components/_float-button-js3.scss
+++ b/versions/1.0.0/src/common/scss/_components/_float-button-js3.scss
@@ -3,7 +3,7 @@
 	
 	position: fixed;
 	bottom: 30px;
-    /*left:80px;*/
+	z-index: 5 !important;
 	width: auto;
 	height: auto;
 	margin: 0;
